# ternary-birch

./: .gitignore  AutomorphismZZ.cpp  AutomorphismZZ.h  Character.h  CharacterZZ.cpp  Dockerfile  Eigenvector.cpp  Eigenvector.h  Genus.h  GenusZZ.cpp  HeckeOperator.h  Ideal.cpp  Ideal.h  Isometry.h  IsometryZZ.cpp  Makefile  Makefile.am  Makefile.in  Math.h  MathZZ.cpp  NeighborIterator.h  NeighborIteratorZZ.cpp  Prime.h  QuadForm.cpp  QuadForm.h  QuadFormZZ.cpp  README.md  Representation.h  RepresentationZZ.cpp  SConstruct  SetCover.cpp  SetCover.h  SparseMatrix.cpp  SparseMatrix.h  autogen.sh  birch.m  configure  configure.ac  main.cpp  spec
data/genus/: 1062347.txt
data/vecs/: 1062347.txt
magma/: genus.m  lat.m  misc.m  sigfield.m  unimodular.m
scripts/: generate_eigenvalues.py
src/: Eigenvector.h  Fp.cpp  Fp.h  Genus.h  HashMap.h  Isometry.cpp  Isometry.h  IsometrySequence.h  Makefile  Makefile.am  Makefile.in  Math.cpp  Math.h  NeighborManager.h  QuadForm.cpp  QuadForm.h  SetCover.cpp  SetCover.h  Spinor.h  birch.cpp  birch.h  birch_util.cpp  birch_util.h  build_database.sage  py_birch.pyx  setup.py  ternary_birch.pyx
src/sage/: build_database.py
